base.html корректировка

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,8 @@
             <a class="me-3 py-2 text-dark text-decoration-none" href="/tabel">Табель</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/users">Пользователи</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/ShablonList">Шаблоны</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/sing-in>Регистрация</a>
-            <a class=" py-2 text-dark text-decoration-none" href="#">Выйти</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/sing-in">Регистрация</a>
+            <a class="py-2 text-dark text-decoration-none" href="#">Выйти</a>
         </nav>
     </div>
 
