--- a/templates/PodrazdelenieSotrEdit.html
+++ b/templates/PodrazdelenieSotrEdit.html
@@ -9,7 +9,7 @@
 <br>
 <br>
 
-<table style="width:100%;">
+<table style="width:100%; margin-left:5mm;">
     <tr>
         <td style="width:33%">
             <b>СОГЛАСОВАНО</b> <br>
