--- a/templates/base.html
+++ b/templates/base.html
@@ -7,32 +7,35 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/site.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <script src="/Personal/Scripts/jquery-3.6.0.min.js"></script>
-    <script src="/Personal/Scripts/bootstrap.min.js"></script>
+    <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">-->
+
 
     <title>{% block title %}{% endblock %}</title>
 </head>
 
 <header>
-    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-            <img class="mb-2" src="{{ url_for('static', filename='image/unnamed.png') }}" alt="" width="40" height="40">
-            <span class="fs-4">Персонал</span>
-        </a>
+    <table class="Menu" style="width:100%;">
+        <tr>
+            <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+                <td onclick="location.href='/' ">
+                    <img class="mb-2" src="{{ url_for('static', filename='image/unnamed.png') }}" alt="" width="40"
+                         height="40">
+                    <span class="fs-4">Персонал</span>
+                </td>
+                <td onclick="location.href='/'">Главная</td>
+                <td onclick="location.href='/'">Администратор</td>
+                <td onclick="location.href='/PodrazdelenieSotrEdit'">График</td>
+                <td onclick="location.href='/about'">Условные обозначения</td>
+                <td onclick="location.href='/tabel'">Табель</td>
+                <td onclick="location.href='/users'">Пользователи</td>
+                <td onclick="location.href='/ShablonList'">Шаблоны</td>
+                <td onclick="location.href='/sing-in'">Регистрация</td>
+                <td onclick="me-3 py-2 text-dark text-decoration-none" href="/sing-in">Регистрация</td>
+                <td onclick="location.href='/'">Выйти</td>
+            </nav>
 
-        <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная страница</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/">Администратор</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/PodrazdelenieSotrEdit">График</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/about">Условные обозначения</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/tabel">Табель</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/users">Пользователи</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/ShablonList">Шаблоны</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/sing-in">Регистрация</a>
-            <a class="py-2 text-dark text-decoration-none" href="#">Выйти</a>
-        </nav>
-    </div>
+        </tr>
+    </table>
 
 </header>
 
@@ -40,12 +43,12 @@
 
 {% block body %}{% endblock %}
 </body>
-<footer class="container pt-4 my-md-5 pt-md-5 border-top">
-    <div class="row">
-        <div class="col-12 col-md">
-            <img class="mb-2" src="{{ url_for('static', filename='image/unnamed.png') }}" alt="" width="24" height="24">
-            <small class="d-block mb-3 text-muted">©ValetovAV 2022–2022</small>
-        </div>
+
+<footer class="footer mt-auto pt-4 my-md-5 pt-md-5 border-top">
+    <div class="col-12 col-md">
+        <img class="mb-2" src="{{ url_for('static', filename='image/unnamed.png') }}" alt="" width="24" height="24">
+        <small class="d-block mb-3 text-muted">©ValetovAV 2022–2022</small>
+    </div>
     </div>
 </footer>
 </html>
