--- a/templates/PodrazdelenieSotrEdit.html
+++ b/templates/PodrazdelenieSotrEdit.html
@@ -15,7 +15,7 @@
             <b>СОГЛАСОВАНО</b> <br>
             Первичная профсоюзная организация<br>
             Брестского филиала РУП «Белтелеком»<br>
-            __________________<br>
+            ___________________________<br>
             "___"______________ _______г.<br>
             Протокол №_________
 
@@ -29,7 +29,7 @@
             Руководитель подразделения <br>
             Брестского филиала РУП «Белтелеком»<br>
             __________________А.М. Гречный<br>
-            "___"______________ _______г.
+            "___"__________________ _______г.
         </td>
     </tr>
 </table>
@@ -551,18 +551,36 @@
 </textarea>
 <br>
 <table style="width:100%;">
-    <tr style="text-align:center;">
-        <td>__________________ Д.В. Кузьмар</td>
+    <tr style="text-align:left">
+        <td>Ведущий инженер ЛСС и АУ    ___________  С.Н. Гембицкий</td>
     </tr>
 </table>
-<br>
+<table style="width:100%;">
+    <tr style="text-align:left;">
+        <td>График составил: </td>
+    </tr>
+</table>
+<table style="width:100%;">
+    <tr style="text-align:left;">
+        <td>эл. механик ЛССи АУ  __________ А.В. Валетов</td>
+    </tr>
+</table>
+<table style="width:100%;">
+    <tr style="text-align:left;">
+        <td>Норму времени проверил:</td>
+    </tr>
+<table style="width:100%;">
+    <tr style="text-align:left;">
+        <td>инженер по организации  труда ____________И.В. Муругова</td>
+    </tr>
+
 
 <div id="ModalDialog1" class="modalDialog">
     <div id="ModalLoad1" class="ModalLoad">
 
     </div>
 </div>
-<br>
+
 
 <script type="text/javascript">
         function PereformirovaniePoPodr() {
