--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,26 @@
+/* CSS */
+
+
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 70px;
+}
+
+.footer {
+    margin-top: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 50px;
+}
+
+
 .InputI {
     font-size: 16px;
     border: none;
@@ -235,6 +258,9 @@
         display: none;
     }
 }
+
+/*
 .footer {
     margin-top: auto;
 }
+*/
