--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress ALL -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -48,7 +49,6 @@
     <div class="col-12 col-md">
         <img class="mb-2" src="{{ url_for('static', filename='image/unnamed.png') }}" alt="" width="24" height="24">
         <small class="d-block mb-3 text-muted">©ValetovAV 2022–2022</small>
-    </div>
     </div>
 </footer>
 </html>
