bootstap.css правки

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -86,6 +86,7 @@
     }
 }
 
+/*noinspection ALL*/
 body {
     margin: 0;
     font-family: var(--bs-body-font-family);
@@ -432,6 +433,7 @@ legend + * {
     clear: left;
 }
 
+/*noinspection ALL*/
 ::-webkit-datetime-edit-fields-wrapper,
 ::-webkit-datetime-edit-text,
 ::-webkit-datetime-edit-minute,
@@ -712,7 +714,7 @@ progress {
 }
 
 .col {
-    flex: 1 0 0%;
+    flex: 100%;
 }
 
 .row-cols-auto > * {
@@ -921,7 +923,7 @@ progress {
 
 @media (min-width: 576px) {
     .col-sm {
-        flex: 1 0 0%;
+        flex: 100%;
     }
 
     .row-cols-sm-auto > * {
@@ -1135,7 +1137,7 @@ progress {
 
 @media (min-width: 768px) {
     .col-md {
-        flex: 1 0 0%;
+        flex: 100%;
     }
 
     .row-cols-md-auto > * {
@@ -1349,7 +1351,7 @@ progress {
 
 @media (min-width: 992px) {
     .col-lg {
-        flex: 1 0 0%;
+        flex: 100%;
     }
 
     .row-cols-lg-auto > * {
@@ -1563,7 +1565,7 @@ progress {
 
 @media (min-width: 1200px) {
     .col-xl {
-        flex: 1 0 0%;
+        flex: 100%;
     }
 
     .row-cols-xl-auto > * {
@@ -1777,7 +1779,7 @@ progress {
 
 @media (min-width: 1400px) {
     .col-xxl {
-        flex: 1 0 0%;
+        flex: 100%;
     }
 
     .row-cols-xxl-auto > * {
@@ -2187,35 +2189,35 @@ progress {
     -webkit-overflow-scrolling: touch;
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
     .table-responsive-sm {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .table-responsive-md {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
     .table-responsive-lg {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
 }
 
-@media (max-width: 1199.98px) {
+@media (max-width: 1200px) {
     .table-responsive-xl {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
 }
 
-@media (max-width: 1399.98px) {
+@media (max-width: 1400px) {
     .table-responsive-xxl {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
@@ -2448,6 +2450,7 @@ textarea.form-control-lg {
     cursor: pointer;
 }
 
+/*noinspection ALL*/
 .form-control-color::-moz-color-swatch {
     border: 0 !important;
     border-radius: 0.375rem;
@@ -2826,6 +2829,7 @@ textarea.form-control-lg {
     color: transparent;
 }
 
+/*noinspection ALL*/
 .form-floating > .form-control:not(:-moz-placeholder-shown), .form-floating > .form-control-plaintext:not(:-moz-placeholder-shown) {
     padding-top: 1.625rem;
     padding-bottom: 0.625rem;
@@ -2849,6 +2853,7 @@ textarea.form-control-lg {
     padding-bottom: 0.625rem;
 }
 
+/*noinspection ALL*/
 .form-floating > .form-control:not(:-moz-placeholder-shown) ~ label {
     opacity: 0.65;
     transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem);
@@ -3168,7 +3173,7 @@ textarea.form-control-lg {
 .btn {
     --bs-btn-padding-x: 0.75rem;
     --bs-btn-padding-y: 0.375rem;
-    --bs-btn-font-family: ;
+    --bs-btn-font-family:1rem ;
     --bs-btn-font-size: 1rem;
     --bs-btn-font-weight: 400;
     --bs-btn-line-height: 1.5;
@@ -3932,7 +3937,7 @@ textarea.form-control-lg {
     --bs-dropdown-color: #dee2e6;
     --bs-dropdown-bg: #343a40;
     --bs-dropdown-border-color: var(--bs-border-color-translucent);
-    --bs-dropdown-box-shadow: ;
+    --bs-dropdown-box-shadow: inset ;
     --bs-dropdown-link-color: #dee2e6;
     --bs-dropdown-link-hover-color: #fff;
     --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
@@ -4058,7 +4063,7 @@ textarea.form-control-lg {
 .nav {
     --bs-nav-link-padding-x: 1rem;
     --bs-nav-link-padding-y: 0.5rem;
-    --bs-nav-link-font-weight: ;
+    --bs-nav-link-font-weight: 1rem ;
     --bs-nav-link-color: var(--bs-link-color);
     --bs-nav-link-hover-color: var(--bs-link-hover-color);
     --bs-nav-link-disabled-color: #6c757d;
@@ -4069,6 +4074,7 @@ textarea.form-control-lg {
     list-style: none;
 }
 
+/*noinspection ALL*/
 .nav-link {
     display: block;
     padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
@@ -4247,7 +4253,7 @@ textarea.form-control-lg {
 .navbar-nav {
     --bs-nav-link-padding-x: 0;
     --bs-nav-link-padding-y: 0.5rem;
-    --bs-nav-link-font-weight: ;
+    --bs-nav-link-font-weight: 1rem ;
     --bs-nav-link-color: var(--bs-navbar-color);
     --bs-nav-link-hover-color: var(--bs-navbar-hover-color);
     --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
@@ -4323,6 +4329,7 @@ textarea.form-control-lg {
     background-size: 100%;
 }
 
+/*noinspection ALL*/
 .navbar-nav-scroll {
     max-height: var(--bs-scroll-height, 75vh);
     overflow-y: auto;
@@ -4686,14 +4693,14 @@ textarea.form-control-lg {
     --bs-card-border-width: 1px;
     --bs-card-border-color: var(--bs-border-color-translucent);
     --bs-card-border-radius: 0.375rem;
-    --bs-card-box-shadow: ;
+    --bs-card-box-shadow: 1rem ;
     --bs-card-inner-border-radius: calc(0.375rem - 1px);
     --bs-card-cap-padding-y: 0.5rem;
     --bs-card-cap-padding-x: 1rem;
     --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
-    --bs-card-cap-color: ;
-    --bs-card-height: ;
-    --bs-card-color: ;
+    --bs-card-cap-color: 1rem ;
+    --bs-card-height: auto ;
+    --bs-card-color: solid ;
     --bs-card-bg: #fff;
     --bs-card-img-overlay-padding: 1rem;
     --bs-card-group-margin: 0.75rem;
@@ -4838,7 +4845,7 @@ textarea.form-control-lg {
     }
 
     .card-group > .card {
-        flex: 1 0 0%;
+        flex: 100%;
         margin-bottom: 0;
     }
 
@@ -5030,12 +5037,13 @@ textarea.form-control-lg {
     border-radius: 0;
 }
 
+/*noinspection ALL*/
 .breadcrumb {
     --bs-breadcrumb-padding-x: 0;
     --bs-breadcrumb-padding-y: 0;
     --bs-breadcrumb-margin-bottom: 1rem;
-    --bs-breadcrumb-bg: ;
-    --bs-breadcrumb-border-radius: ;
+    --bs-breadcrumb-bg: inherit ;
+    --bs-breadcrumb-border-radius: 0.375rem;
     --bs-breadcrumb-divider-color: #6c757d;
     --bs-breadcrumb-item-padding-x: 0.5rem;
     --bs-breadcrumb-item-active-color: #6c757d;
@@ -5053,6 +5061,7 @@ textarea.form-control-lg {
     padding-left: var(--bs-breadcrumb-item-padding-x);
 }
 
+/*noinspection ALL*/
 .breadcrumb-item + .breadcrumb-item::before {
     float: left;
     padding-right: var(--bs-breadcrumb-item-padding-x);
@@ -5830,7 +5839,7 @@ textarea.form-control-lg {
     --bs-toast-spacing: 1.5rem;
     --bs-toast-max-width: 350px;
     --bs-toast-font-size: 0.875rem;
-    --bs-toast-color: ;
+    --bs-toast-color: #fff;
     --bs-toast-bg: rgba(255, 255, 255, 0.85);
     --bs-toast-border-width: 1px;
     --bs-toast-border-color: var(--bs-border-color-translucent);
@@ -5859,6 +5868,7 @@ textarea.form-control-lg {
     display: none;
 }
 
+/*noinspection ALL*/
 .toast-container {
     position: absolute;
     z-index: 1090;
@@ -5900,7 +5910,7 @@ textarea.form-control-lg {
     --bs-modal-width: 500px;
     --bs-modal-padding: 1rem;
     --bs-modal-margin: 0.5rem;
-    --bs-modal-color: ;
+    --bs-modal-color: 0 ;
     --bs-modal-bg: #fff;
     --bs-modal-border-color: var(--bs-border-color-translucent);
     --bs-modal-border-width: 1px;
@@ -5914,7 +5924,7 @@ textarea.form-control-lg {
     --bs-modal-header-border-width: 1px;
     --bs-modal-title-line-height: 1.5;
     --bs-modal-footer-gap: 0.5rem;
-    --bs-modal-footer-bg: ;
+    --bs-modal-footer-bg: 1rem ;
     --bs-modal-footer-border-color: var(--bs-border-color);
     --bs-modal-footer-border-width: 1px;
     position: fixed;
@@ -6105,7 +6115,7 @@ textarea.form-control-lg {
     overflow-y: auto;
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
     .modal-fullscreen-sm-down {
         width: 100vw;
         max-width: none;
@@ -6129,7 +6139,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .modal-fullscreen-md-down {
         width: 100vw;
         max-width: none;
@@ -6153,7 +6163,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
     .modal-fullscreen-lg-down {
         width: 100vw;
         max-width: none;
@@ -6177,7 +6187,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1199.98px) {
+@media (max-width: 1200px) {
     .modal-fullscreen-xl-down {
         width: 100vw;
         max-width: none;
@@ -6201,7 +6211,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1399.98px) {
+@media (max-width: 1400px) {
     .modal-fullscreen-xxl-down {
         width: 100vw;
         max-width: none;
@@ -6230,7 +6240,7 @@ textarea.form-control-lg {
     --bs-tooltip-max-width: 200px;
     --bs-tooltip-padding-x: 0.5rem;
     --bs-tooltip-padding-y: 0.25rem;
-    --bs-tooltip-margin: ;
+    --bs-tooltip-margin: 0 ;
     --bs-tooltip-font-size: 0.875rem;
     --bs-tooltip-color: #fff;
     --bs-tooltip-bg: #000;
@@ -6335,6 +6345,7 @@ textarea.form-control-lg {
     border-radius: var(--bs-tooltip-border-radius);
 }
 
+/*noinspection ALL*/
 .popover {
     --bs-popover-zindex: 1070;
     --bs-popover-max-width: 276px;
@@ -6813,14 +6824,14 @@ textarea.form-control-lg {
     --bs-offcanvas-height: 30vh;
     --bs-offcanvas-padding-x: 1rem;
     --bs-offcanvas-padding-y: 1rem;
-    --bs-offcanvas-color: ;
+    --bs-offcanvas-color: rgba(255, 255, 255, 0);
     --bs-offcanvas-bg: #fff;
     --bs-offcanvas-border-width: 1px;
     --bs-offcanvas-border-color: var(--bs-border-color-translucent);
     --bs-offcanvas-box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
     .offcanvas-sm {
         position: fixed;
         bottom: 0;
@@ -6837,13 +6848,13 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 575.98px) and (prefers-reduced-motion: reduce) {
+@media (max-width: 576px) and (prefers-reduced-motion: reduce) {
     .offcanvas-sm {
         transition: none;
     }
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
     .offcanvas-sm.offcanvas-start {
         top: 0;
         left: 0;
@@ -6853,7 +6864,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
     .offcanvas-sm.offcanvas-end {
         top: 0;
         right: 0;
@@ -6863,7 +6874,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
     .offcanvas-sm.offcanvas-top {
         top: 0;
         right: 0;
@@ -6875,7 +6886,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
     .offcanvas-sm.offcanvas-bottom {
         right: 0;
         left: 0;
@@ -6886,13 +6897,13 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
     .offcanvas-sm.showing, .offcanvas-sm.show:not(.hiding) {
         transform: none;
     }
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
     .offcanvas-sm.showing, .offcanvas-sm.hiding, .offcanvas-sm.show {
         visibility: visible;
     }
@@ -6918,7 +6929,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .offcanvas-md {
         position: fixed;
         bottom: 0;
@@ -6935,13 +6946,13 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 767.98px) and (prefers-reduced-motion: reduce) {
+@media (max-width: 768px) and (prefers-reduced-motion: reduce) {
     .offcanvas-md {
         transition: none;
     }
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .offcanvas-md.offcanvas-start {
         top: 0;
         left: 0;
@@ -6951,7 +6962,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .offcanvas-md.offcanvas-end {
         top: 0;
         right: 0;
@@ -6961,7 +6972,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .offcanvas-md.offcanvas-top {
         top: 0;
         right: 0;
@@ -6973,7 +6984,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .offcanvas-md.offcanvas-bottom {
         right: 0;
         left: 0;
@@ -6984,13 +6995,13 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .offcanvas-md.showing, .offcanvas-md.show:not(.hiding) {
         transform: none;
     }
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .offcanvas-md.showing, .offcanvas-md.hiding, .offcanvas-md.show {
         visibility: visible;
     }
@@ -7016,7 +7027,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
     .offcanvas-lg {
         position: fixed;
         bottom: 0;
@@ -7033,13 +7044,13 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 991.98px) and (prefers-reduced-motion: reduce) {
+@media (max-width: 992px) and (prefers-reduced-motion: reduce) {
     .offcanvas-lg {
         transition: none;
     }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
     .offcanvas-lg.offcanvas-start {
         top: 0;
         left: 0;
@@ -7049,7 +7060,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
     .offcanvas-lg.offcanvas-end {
         top: 0;
         right: 0;
@@ -7059,7 +7070,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
     .offcanvas-lg.offcanvas-top {
         top: 0;
         right: 0;
@@ -7071,7 +7082,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
     .offcanvas-lg.offcanvas-bottom {
         right: 0;
         left: 0;
@@ -7082,13 +7093,13 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
     .offcanvas-lg.showing, .offcanvas-lg.show:not(.hiding) {
         transform: none;
     }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
     .offcanvas-lg.showing, .offcanvas-lg.hiding, .offcanvas-lg.show {
         visibility: visible;
     }
@@ -7114,7 +7125,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1199.98px) {
+@media (max-width: 1200px) {
     .offcanvas-xl {
         position: fixed;
         bottom: 0;
@@ -7131,13 +7142,13 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1199.98px) and (prefers-reduced-motion: reduce) {
+@media (max-width: 1200px) and (prefers-reduced-motion: reduce) {
     .offcanvas-xl {
         transition: none;
     }
 }
 
-@media (max-width: 1199.98px) {
+@media (max-width: 1200px) {
     .offcanvas-xl.offcanvas-start {
         top: 0;
         left: 0;
@@ -7147,7 +7158,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1199.98px) {
+@media (max-width: 1200px) {
     .offcanvas-xl.offcanvas-end {
         top: 0;
         right: 0;
@@ -7157,7 +7168,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1199.98px) {
+@media (max-width: 1200px) {
     .offcanvas-xl.offcanvas-top {
         top: 0;
         right: 0;
@@ -7169,7 +7180,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1199.98px) {
+@media (max-width: 1200px) {
     .offcanvas-xl.offcanvas-bottom {
         right: 0;
         left: 0;
@@ -7180,13 +7191,13 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1199.98px) {
+@media (max-width: 1200px) {
     .offcanvas-xl.showing, .offcanvas-xl.show:not(.hiding) {
         transform: none;
     }
 }
 
-@media (max-width: 1199.98px) {
+@media (max-width: 1200px) {
     .offcanvas-xl.showing, .offcanvas-xl.hiding, .offcanvas-xl.show {
         visibility: visible;
     }
@@ -7212,7 +7223,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1399.98px) {
+@media (max-width: 1400px) {
     .offcanvas-xxl {
         position: fixed;
         bottom: 0;
@@ -7229,13 +7240,13 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1399.98px) and (prefers-reduced-motion: reduce) {
+@media (max-width: 1400px) and (prefers-reduced-motion: reduce) {
     .offcanvas-xxl {
         transition: none;
     }
 }
 
-@media (max-width: 1399.98px) {
+@media (max-width: 1400px) {
     .offcanvas-xxl.offcanvas-start {
         top: 0;
         left: 0;
@@ -7245,7 +7256,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1399.98px) {
+@media (max-width: 1400px) {
     .offcanvas-xxl.offcanvas-end {
         top: 0;
         right: 0;
@@ -7255,7 +7266,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1399.98px) {
+@media (max-width: 1400px) {
     .offcanvas-xxl.offcanvas-top {
         top: 0;
         right: 0;
@@ -7267,7 +7278,7 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1399.98px) {
+@media (max-width: 1400px) {
     .offcanvas-xxl.offcanvas-bottom {
         right: 0;
         left: 0;
@@ -7278,13 +7289,13 @@ textarea.form-control-lg {
     }
 }
 
-@media (max-width: 1399.98px) {
+@media (max-width: 1400px) {
     .offcanvas-xxl.showing, .offcanvas-xxl.show:not(.hiding) {
         transform: none;
     }
 }
 
-@media (max-width: 1399.98px) {
+@media (max-width: 1400px) {
     .offcanvas-xxl.showing, .offcanvas-xxl.hiding, .offcanvas-xxl.show {
         visibility: visible;
     }
@@ -7460,6 +7471,7 @@ textarea.form-control-lg {
     }
 }
 
+/*noinspection ALL*/
 .placeholder-wave {
     -webkit-mask-image: linear-gradient(130deg, #000 55%, rgba(0, 0, 0, 0.8) 75%, #000 95%);
     mask-image: linear-gradient(130deg, #000 55%, rgba(0, 0, 0, 0.8) 75%, #000 95%);
@@ -7471,15 +7483,15 @@ textarea.form-control-lg {
 
 @-webkit-keyframes placeholder-wave {
     100% {
-        -webkit-mask-position: -200% 0%;
-        mask-position: -200% 0%;
+        -webkit-mask-position: -200% 0;
+        mask-position: -200% 0;
     }
 }
 
 @keyframes placeholder-wave {
     100% {
-        -webkit-mask-position: -200% 0%;
-        mask-position: -200% 0%;
+        -webkit-mask-position: -200% 0;
+        mask-position: -200% 0;
     }
 }
 
